bin/testsuite/tests/compiler/src/errors/compiler110.swg
#global testerror "Err0094"
enum A: u8
{
    Red   = B.Red
    Green
    Blue
}
